--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
       function GoIn360() {
         fade.style.opacity = 1;
-        setTimeout(() => { window.location.href = 'https://demonstrationprojects.github.io/AirSpaceDay360/';}, 1000);
+        setTimeout(() => { window.location.href = 'https://demonstrationprojects.github.io/ARFaceSpaceDayDemo/';}, 1000);
       }
 
       function animate() {
